--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">05.12.2017</string>
     <string name="text_1">text 1</string>
+    <string name="test_button_2">test Button 2</string>
+    <string name="text_2">text 2</string>
+    <string name="test_button_3">test button 3</string>
+    <string name="text_3">text 3</string>
+    <string name="test_button_4">test button 4</string>
+    <string name="text_4">text 4</string>
 </resources>
